feat(57): store profile activity period as dates
